<resources>
    <string name="app_name">CoinManager</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="coinlist">Coinlist</string>
    <string name="watchlist">Watchlist</string>
    <string name="coin">Coin</string>
    <string name="edit_coin">Edit Coin</string>
    <string name="map">Map</string>
    <string name="exchange">Exchange</string>
    <string name="purchased_price">Purchased Price</string>
    <string name="date">Date</string>
    <string name="save">save</string>
    <string name="update">update</string>
    <string name="add_to_watchlist">add to watchlist</string>
    <string name="current">current</string>
    <string name="clicked_coordinates">clicked coordinates</string>
    <string name="fh">This is the FH Technikum Vienna</string>
    <string name="marker">Marker</string>
    <string name="cancel">cancel</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="watchlist_action">Select an option for %1$s:</string>
    <string name="enter_exchange">Please enter an exchange.</string>
    <string name="enter_price">Please enter a price.</string>
    <string name="watchlist_delete_action">Do you really want to delete this coin?</string>
    <string name="map_delete_action">Do you really want to delete \"%1$s\"?</string>
</resources>