<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_main"
    app:startDestination="@id/coinlistFragment">

    <fragment
        android:id="@+id/watchlistFragment"
        android:name="com.example.coinmanager.watchlist.WatchlistFragment"
        android:label="@string/watchlist"
        tools:layout="@layout/watchlist_fragment" >
        <action
            android:id="@+id/action_watchlistFragment_to_coinEditFragment"
            app:destination="@id/coinEditFragment" />
    </fragment>
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.example.coinmanager.map.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_map" />
    <fragment
        android:id="@+id/coinFragment"
        android:name="com.example.coinmanager.coin.CoinFragment"
        android:label="@string/coin"
        tools:layout="@layout/coin_fragment" >
        <action
            android:id="@+id/action_coinFragment_to_watchlistFragment"
            app:destination="@id/watchlistFragment" />
        <argument
            android:name="coin"
            app:argType="com.example.coinmanager.models.CoinlistCoin" />
    </fragment>

    <fragment
        android:id="@+id/coinlistFragment"
        android:name="com.example.coinmanager.coinlist.CoinlistFragment"
        android:label="@string/coinlist"
        tools:layout="@layout/activity_main" >
        <action
            android:id="@+id/action_coinlistFragment_to_coinFragment"
            app:destination="@id/coinFragment"/>
    </fragment>
    <fragment
        android:id="@+id/coinEditFragment"
        android:name="com.example.coinmanager.coin.CoinEditFragment"
        android:label="@string/edit_coin"
        tools:layout="@layout/coin_fragment" >
        <argument
            android:name="coin"
            app:argType="com.example.coinmanager.CoinWithUpdate" />
        <action
            android:id="@+id/action_coinEditFragment_to_watchlistFragment"
            app:destination="@id/watchlistFragment" />
    </fragment>
</navigation>